--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="manifest" href="manifest.json">
   </head>
   <body>
     <div class="container mt-5">
